--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "morgan": "~1.10.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "~1.4.2",
+    "@types/debug": "~4.1.7",
+    "@types/express": "~4.17.13",
+    "@types/http-errors": "~1.8.1",
+    "@types/morgan": "~1.9.3",
+    "@types/node": "14",
+    "prettier": "~2.3.2",
     "typescript": "~4.3.5"
   }
 }
