--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@types/http-errors": "~1.8.1",
     "@types/morgan": "~1.9.3",
     "@types/node": "14",
+    "@typescript-eslint/eslint-plugin": "~4.29.1",
+    "@typescript-eslint/parser": "~4.29.1",
+    "eslint": "~7.32.0",
+    "eslint-config-prettier": "~8.3.0",
     "prettier": "~2.3.2",
     "typescript": "~4.3.5"
   }
