--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "migrate": "node-pg-migrate"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~4.3.2",
+    "dotenv": "~10.0.0",
     "ejs": "~3.1.6",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "node-pg-migrate": "~5.10.0",
+    "pg": "~8.7.1",
+    "postgres": "~1.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "~1.4.2",
