--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "migrate": "node-pg-migrate"
   },
   "dependencies": {
+    "@types/bcrypt": "~5.0.0",
+    "@types/nodemailer": "~6.4.4",
+    "bcrypt": "~5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~4.3.2",
-    "dotenv": "~10.0.0",
+    "dotenv": "~16.0.0",
     "ejs": "~3.1.6",
+    "email-deep-validator": "~3.3.0",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
+    "mongoose": "~6.2.4",
     "morgan": "~1.10.0",
     "node-pg-migrate": "~5.10.0",
+    "nodemailer": "~6.7.2",
     "pg": "~8.7.1",
     "postgres": "~1.0.2"
   },
