--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "~5.0.0",
+    "@types/jsonwebtoken": "~8.5.8",
     "@types/nodemailer": "~6.4.4",
     "bcrypt": "~5.0.1",
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
     "email-deep-validator": "~3.3.0",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
+    "jsonwebtoken": "~8.5.1",
     "mongoose": "~6.2.4",
     "morgan": "~1.10.0",
     "node-pg-migrate": "~5.10.0",
